--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="top-text">
                 <p id="top-text-first" class="top-text-first">遊んで</p>
                 <p id="top-text-second" class="top-text-second">学べる</p>
-                <img src="/img/e0100_0.png" alt="">
+                <img id="top-img" src="/img/e0100_0.png" alt="">
                 <p id="top-text-third" class="top-text-third">プログラミング教育</p>
             </div>
             <div id="top-character" class="top-character">
@@ -72,30 +72,54 @@
     <section id="main">
         <div class="desc">
             <div class="desc-body">
-                <h1>プログラミングって何？</h1>
+                <h1 id="desc-body-h1">プログラミングって何？</h1>
                 <img src="/img/robot.jpg" alt="">
                 <img class="desc-body-chara-c" src="/img/chara-c.png" alt="">
                 <img class="desc-body-chara-p" src="/img/chara-p.png" alt="">
                 <div class="desc-body-btn">
-                    <a href="why.html">さらに詳しく</a>
+                    <a href="what.html">さらに詳しく</a>
                 </div>
             </div>
+            <!-- <div class="desc-background">
+                <img class="desc-background1" src="/img/linecircle.png" alt="">
+                <img class="desc-background2" src="/img/linesquare.png" alt="">
+                <img class="desc-background3" src="/img/dotsquare.png" alt="">
+                <img class="desc-background4" src="/img/dottriangle.png" alt="">
+            </div> -->
         </div>
         <div class="more">
             <div class="more-body">
                 <div class="more-text">
-                    <p class="more-p1">つくる</p>
-                    <p class="more-p2">まなぶ</p>
-                    <p class="more-p3">あそぶ</p>
+                    <div id="more-p1" class="more-p1">
+                        <p>つくる</p>
+                        <img src="/img/origami.png" alt="">
+                    </div>
+                    <div id="more-p2" class="more-p2">
+                        <img src="/img/no-to.png" alt="">
+                        <p>まなぶ</p>
+                    </div>
+                    <div id="more-p3" class="more-p3">
+                        <p>あそぶ</p>
+                        <img src="/img/hikouki.png" alt="">
+                    </div>
                 </div>
                 <img src="/img/child1.jpg" alt="">
             </div>
             <div class="more-body">
                 <img src="/img/child2.jpg" alt="">
                 <div class="more-text">
-                    <p class="more-p4">かんがえる</p>
-                    <p class="more-p5">みつける</p>
-                    <p class="more-p6">わかる</p>
+                    <div id="more-p4" class="more-p4">
+                        <p>かんがえる</p>
+                        <img src="/img/hatena.png" alt="">
+                    </div>
+                    <div id="more-p5" class="more-p5">
+                        <p>みつける</p>
+                        <img src="/img/ru-pe.png" alt="">
+                    </div>
+                    <div id="more-p6" class="more-p6">
+                        <p>わかる</p>
+                        <img src="/img/dennkyuu.png" alt="">
+                    </div>
                 </div>
             </div>
         </div>
