--- a/parent.html
+++ b/parent.html
@@ -49,7 +49,7 @@
                 <div class="top-text">
                     <p id="top-text-first" class="top-text-first">遊んで</p>
                     <p id="top-text-second" class="top-text-second">学べる</p>
-                    <img src="/img/e0100_0.png" alt="">
+                    <img id="top-img" src="/img/e0100_0.png" alt="">
                     <p id="top-text-third" class="top-text-third">プログラミング教育</p>
                 </div>
                 <div id="top-character" class="top-character">
@@ -75,7 +75,7 @@
                 <div class="parent-concept">
                     <div class="parent-title">
                         <img src="/img/Rectangle 158.png" alt="">
-                        <h1>タイトル</h1>
+                        <h1>はじめに</h1>
                         <img src="/img/Rectangle 158.png" alt="">
                     </div>
                     <p>最近重要視されているプログラミング教育。<br>
