--- a/goods.html
+++ b/goods.html
@@ -460,6 +460,24 @@
     </div>
     <div class="parent-footer-2"></div>
   </section>
+  <div id="parent-menu-btn">
+    <img src="/img/menu.png" alt="">
+    <p>メニュー</p>
+  </div>
+  </div>
+  <nav id="parent-menu">
+  <div class="parent-menu-list">
+    <ul>
+        <li><a href="parent.html"><span>保護者用</span><br>プログラミング<br><span>トップページ</span></a></li>
+        <li><a href="ability.html">身に付く能力</a></li>
+        <li><a href="goods.html">商品紹介</a></li>
+        <li><a href="index.html"><span>子供用</span><br>プログラミング<br><span>トップページ</span></a></li>
+        <li><a href="what.html">プログラミングって何？</a></li>
+        <li><div class="parent-menu-close"><p>×</p></div></li>
+    </ul>
+  </div>
+  </nav>
+  <script src="js/nav.js"></script>
   <script src="/js/goods.js"></script>
   <script src="js/gsap.js"></script>
 </body>
