--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
                     <a href="what.html">さらに詳しく</a>
                 </div>
             </div>
-            <!-- <div class="desc-background">
+            <div class="desc-background">
                 <img class="desc-background1" src="/img/linecircle.png" alt="">
                 <img class="desc-background2" src="/img/linesquare.png" alt="">
                 <img class="desc-background3" src="/img/dotsquare.png" alt="">
                 <img class="desc-background4" src="/img/dottriangle.png" alt="">
-            </div> -->
+            </div>
         </div>
         <div class="more">
             <div class="more-body">
