--- a/parent.html
+++ b/parent.html
@@ -182,8 +182,8 @@
                 <li><a href="goods.html">商品紹介</a></li>
                 <li><a href="index.html"><span>子供用</span><br>プログラミング<br><span>トップページ</span></a></li>
                 <li><a href="what.html">プログラミングって何？</a></li>
+                <li><div class="parent-menu-close"><p>×</p></div></li>
             </ul>
-            <div class="parent-menu-close"></div>
         </div>
     </nav>
     <script src="js/gsap.js"></script>
