--- a/goods.html
+++ b/goods.html
@@ -167,7 +167,7 @@
             <p>発売日:2021年6月11日<br>販売元:任天堂<br>価格:パッケージ版3480円</p>
           </div>
           <div class="product-right">
-            <img src="/img/image 25.png" alt="">
+            <img src="/img/maxresdefault.png" alt="">
             <div class="product-right-btn">
               <a href="https://www.nintendo.co.jp/switch/awuxa/">商品はこちら</a>
             </div>
