--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <img class="desc-body-chara-c" src="/img/chara-c.png" alt="">
                 <img class="desc-body-chara-p" src="/img/chara-p.png" alt="">
                 <div class="desc-body-btn">
-                    <a href="what.html">さらに詳しく</a>
+                    <a href="what.html">もっとみる</a>
                 </div>
             </div>
             <div class="desc-background">
