--- a/goods.html
+++ b/goods.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>遊んで学べるプログラミング教育：保護者用：商品紹介</title>
   <link rel="stylesheet" href="/css/style.css">
   <script>
     (function (d) {
@@ -151,7 +151,9 @@
           </div>
         </div>
       </div>
-      <a class="goods-info-close" href="#"></a>
+      <div class="goods-info-close">
+        <p>×</p>
+      </div>
     </div>
 
     <div class="goods-info info-navi">
