--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>oyako</title>
+    <title>遊んで学べるプログラミング教育：こども用</title>
     <link rel="stylesheet" href="/css/style.css">
     <script>
         (function (d) {
@@ -48,7 +48,7 @@
             <div class="top-text">
                 <p id="top-text-first" class="top-text-first">遊んで</p>
                 <p id="top-text-second" class="top-text-second">学べる</p>
-                <img id="top-img" src="/img/e0100_0.png" alt="">
+                <img id="top-img" src="/img/hukidashi-child.png" alt="">
                 <p id="top-text-third" class="top-text-third">プログラミング教育</p>
             </div>
             <div id="top-character" class="top-character">
@@ -85,6 +85,14 @@
                 <img class="desc-background2" src="/img/linesquare.png" alt="">
                 <img class="desc-background3" src="/img/dotsquare.png" alt="">
                 <img class="desc-background4" src="/img/dottriangle.png" alt="">
+                <img class="desc-background5" src="/img/dottriangle.png" alt="">
+                <img class="desc-background6" src="/img/dottriangle.png" alt="">
+                <img class="desc-background7" src="/img/dotsquare.png" alt="">
+                <img class="desc-background8" src="/img/dotsquare.png" alt="">
+                <img class="desc-background9" src="/img/linecircle.png" alt="">
+                <img class="desc-background10" src="/img/linesquare.png" alt="">
+                <img class="desc-background11" src="/img/linecircle.png" alt="">
+                <img class="desc-background12" src="/img/linesquare.png" alt="">
             </div>
         </div>
         <div class="more">
