--- a/parent.html
+++ b/parent.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>parents</title>
+    <title>遊んで学べるプログラミング教育：保護者用</title>
     <link rel="stylesheet" href="/css/style.css">
     <script>
         (function (d) {
@@ -43,13 +43,12 @@
 </head>
 
 <body>
-    <div id="fixed">
         <section id="parent-top">
             <div class="top-main">
                 <div class="top-text">
                     <p id="top-text-first" class="top-text-first">遊んで</p>
                     <p id="top-text-second" class="top-text-second">学べる</p>
-                    <img id="top-img" src="/img/e0100_0.png" alt="">
+                    <img id="top-img" src="/img/hukidashi-parent.png" alt="">
                     <p id="top-text-third" class="top-text-third">プログラミング教育</p>
                 </div>
                 <div id="top-character" class="top-character">
@@ -117,7 +116,7 @@
                         プログラミングのスキルだけでなく<br>
                         子供の将来に必要な創造性や<br>
                         問題解決能力を養うとされています。</p>
-                    <div class="parent-btn">
+                    <div class="parent-btn parent-btn-animation0">
                         <a href="/ability.html">さらに詳しく</a>
                     </div>
                 </div>
@@ -129,7 +128,7 @@
                         子供だけの学習ではなく<br>
                         親子で一緒に遊びながら<br>
                         プログラミングについて学ぶことができます。</p>
-                    <div class="parent-btn">
+                    <div class="parent-btn parent-btn-animation">
                         <a href="/goods.html">さらに詳しく</a>
                     </div>
                     <img class="togehter-img-1" src="/img/board2.jpg" alt="">
@@ -173,7 +172,6 @@
             <img src="/img/menu.png" alt="">
             <p>メニュー</p>
         </div>
-    </div>
     <nav id="parent-menu">
         <div class="parent-menu-list">
             <ul>
