--- a/ability.html
+++ b/ability.html
@@ -63,15 +63,27 @@
   </div>
     <div class="ability-contents-btn">
       <div class="ability-contents-btn-D ab-btn-1">
+        <div class="ab-btn1-img">
+          <img src="/img/wakaru.png" alt="">
+        </div>
         <h2>わかる力</h2>
       </div>
       <div class="ability-contents-btn-D ab-btn-2">
+        <div class="ab-btn1-img">
+          <img src="/img/narabikaeru.png" alt="">
+        </div>
         <h2>並び替える力</h2>
       </div>
       <div class="ability-contents-btn-D ab-btn-3">
+        <div class="ab-btn1-img">
+          <img src="/img/kantan.png" alt="">
+        </div>
         <h2>簡単にする力</h2>
       </div>
       <div class="ability-contents-btn-D ab-btn-4">
+        <div class="ab-btn1-img">
+          <img src="/img/tukuridasu.png" alt="">
+        </div>
         <h2>作り出す力</h2>
       </div>
     </div>
@@ -82,8 +94,8 @@
         <div class="footer-btn-1">
             <div class="footer-btn-ability">
                 <div class="footer-ability-img">
-                    <img class="footer-ability-img-1" src="/img/chara-c.png" alt="">
-                    <img class="footer-ability-img-2" src="/img/chara-p.png" alt="">
+                    <img class="footer-ability-img-1" src="/img/newchild.png" alt="">
+                    <img class="footer-ability-img-2" src="/img/newparents.png" alt="">
                 </div>
                 <a href="/ability.html">身に付く能力</a>
             </div>
