--- a/goods.html
+++ b/goods.html
@@ -440,8 +440,8 @@
       <div class="footer-btn-1">
         <div class="footer-btn-ability">
           <div class="footer-ability-img">
-            <img class="footer-ability-img-1" src="/img/chara-c.png" alt="">
-            <img class="footer-ability-img-2" src="/img/chara-p.png" alt="">
+            <img class="footer-ability-img-1" src="/img/newchild.png" alt="">
+            <img class="footer-ability-img-2" src="/img/newparents.png" alt="">
           </div>
           <a href="/ability.html">身に付く能力</a>
         </div>
