--- a/parent.html
+++ b/parent.html
@@ -52,8 +52,8 @@
                     <p id="top-text-third" class="top-text-third">プログラミング教育</p>
                 </div>
                 <div id="top-character" class="top-character">
-                    <img id="top-character-c" class="top-character-c" src="/img/chara-c.png" alt="">
-                    <img id="top-character-p" class="top-character-p" src="/img/chara-p.png" alt="">
+                    <img id="top-character-c" class="top-character-c" src="/img/newchild.png" alt="">
+                    <img id="top-character-p" class="top-character-p" src="/img/newparents.png" alt="">
                 </div>
             </div>
             <div class="top-background">
@@ -146,8 +146,8 @@
                 <div class="footer-btn-1">
                     <div class="footer-btn-ability">
                         <div class="footer-ability-img">
-                            <img class="footer-ability-img-1" src="/img/chara-c.png" alt="">
-                            <img class="footer-ability-img-2" src="/img/chara-p.png" alt="">
+                            <img class="footer-ability-img-1" src="/img/newchild.png" alt="">
+                            <img class="footer-ability-img-2" src="/img/newparents.png" alt="">
                         </div>
                         <a href="/ability.html">身に付く能力</a>
                     </div>
