--- a/what.html
+++ b/what.html
@@ -46,13 +46,13 @@
     <section id="why-main">
         <h1>プログラミングって何？</h1>
         <div class="why-main-first">
-            <img class="why-main-firstimg-c" src="/img/chara-c.png" alt="">
+            <img class="why-main-firstimg-c" src="/img/newchild.png" alt="">
             <img class="why-main-firstimg" src="/img/child1.jpg" alt="">
             <h2>指示して</h2>
         </div>
         <img src="/img/arrow.png" alt="">
         <div class="why-main-second">
-            <img class="why-main-secondimg-c" src="/img/chara-c.png" alt="">
+            <img class="why-main-secondimg-c" src="/img/newchild.png" alt="">
             <img class="why-main-secondimg" src="/img/board1.jpg" alt="">
             <h2>動かす！</h2>
         </div>
@@ -74,7 +74,11 @@
         <div class="footer-main">
             <img src="/img/遊んで学んで プログラミング.png" alt="">
             <div class="footer-btn-1">
-                <a href="why.html">プログラミングって何？</a>
+                <div class="c-footer1-img">
+                    <img class="c-footer1-img1" src="/img/newchild.png" alt="">
+                    <img class="c-footer1-img2" src="/img/hatena.png" alt="">
+                </div>
+                <a href="what.html">プログラミングって何？</a>
             </div>
             <div class="footer-btn-2">
                 <a href="/parent.html">保護者用ページへ</a>
