--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                 <p id="top-text-third" class="top-text-third">プログラミング教育</p>
             </div>
             <div id="top-character" class="top-character">
-                <img id="top-character-c" class="top-character-c" src="/img/chara-c.png" alt="">
-                <img id="top-character-p" class="top-character-p" src="/img/chara-p.png" alt="">
+                <img id="top-character-c" class="top-character-c" src="/img/newchild.png" alt="">
+                <img id="top-character-p" class="top-character-p" src="/img/newparents.png" alt="">
             </div>
         </div>
         <div class="top-background">
@@ -74,8 +74,8 @@
             <div class="desc-body">
                 <h1 id="desc-body-h1">プログラミングって何？</h1>
                 <img src="/img/robot.jpg" alt="">
-                <img class="desc-body-chara-c" src="/img/chara-c.png" alt="">
-                <img class="desc-body-chara-p" src="/img/chara-p.png" alt="">
+                <img class="desc-body-chara-c" src="/img/newchild.png" alt="">
+                <img class="desc-body-chara-p" src="/img/newparents.png" alt="">
                 <div class="desc-body-btn">
                     <a href="what.html">もっとみる</a>
                 </div>
@@ -136,6 +136,10 @@
         <div class="footer-main">
             <img src="/img/遊んで学んで プログラミング.png" alt="">
             <div class="footer-btn-1">
+                <div class="c-footer1-img">
+                    <img class="c-footer1-img1" src="/img/newchild.png" alt="">
+                    <img class="c-footer1-img2" src="/img/hatena.png" alt="">
+                </div>
                 <a href="what.html">プログラミングって何？</a>
             </div>
             <div class="footer-btn-2">
