--- a/goods.html
+++ b/goods.html
@@ -63,7 +63,7 @@
           <img src="/img/maxresdefault.png" alt="">
           <h2>ゲームプログラミング</h2>
         </div>
-        <div class="item">
+        <div class="item item-springin">
           <img src="/img/springin.png" alt="">
           <h2>Springin</h2>
         </div>
@@ -72,15 +72,15 @@
     <div class="goods-main-robot">
       <h1 class="item-title">ロボットで学ぶ</h1>
       <div class="item-flex">
-        <div class="item">
+        <div class="item item-toio">
           <img src="/img/toio.png" alt="">
           <h2>toio</h2>
         </div>
-        <div class="item">
+        <div class="item item-alilo">
           <img src="/img/alilo.png" alt="">
           <h2>alilo</h2>
         </div>
-        <div class="item">
+        <div class="item item-romi">
           <img src="/img/romi.jpeg" alt="">
           <h2>Romi</h2>
         </div>
@@ -89,15 +89,15 @@
     <div class="goods-main-analog">
       <h1 class="item-title">アナログで学ぶ</h1>
       <div class="item-flex">
-        <div class="item">
+        <div class="item item-swich">
           <img src="/img/swich.webp" alt="">
           <h2>ころがスイッチ</h2>
         </div>
-        <div class="item">
+        <div class="item item-car">
           <img src="/img/car.jpg" alt="">
           <h2>プログラミングカー</h2>
         </div>
-        <div class="item">
+        <div class="item item-logical">
           <img src="/img/rogical.jpeg" alt="">
           <h2>ロジカルルートパズル</h2>
         </div>
@@ -106,11 +106,11 @@
     <div class="goods-main-thinking">
       <h1 class="item-title">思考力を学ぶ</h1>
       <div class="item-flex">
-        <div class="item">
+        <div class="item item-think">
           <img src="/img/thinkthink.webp" alt="">
           <h2>Think!Think!</h2>
         </div>
-        <div class="item">
+        <div class="item item-Q">
           <img src="/img/Q.jpeg" alt="">
           <h2>Q</h2>
         </div>
@@ -119,16 +119,18 @@
     <div class="goods-main-tv">
       <h1 class="item-title">番組で学ぶ</h1>
       <div class="item-flex">
-        <div class="item">
+        <div class="item item-why">
           <img src="/img/Why.jpeg" alt="">
           <h2>Why!?プログラミング</h2>
         </div>
-        <div class="item">
+        <div class="item item-tekisiko">
           <img src="/img/tekisiko.png" alt="">
           <h2>テキシコー</h2>
         </div>
       </div>
     </div>
+
+
 
 
     <div class="goods-info info-scratch">
@@ -176,10 +178,12 @@
           </div>
         </div>
       </div>
-      <a class="goods-info-close" href="#"></a>
+      <div class="goods-info-close">
+        <p>×</p>
+      </div>
     </div>
 
-    <div class="goods-info">
+    <div class="goods-info info-springin">
       <h3>Springin</h3>
       <div class="goods-info-main">
         <img src="/img/springin.png" alt="">
@@ -199,10 +203,12 @@
           </div>
         </div>
       </div>
-      <a class="goods-info-close" href="#"></a>
+      <div class="goods-info-close">
+        <p>×</p>
+      </div>
     </div>
 
-    <div class="goods-info">
+    <div class="goods-info info-toio">
       <h3>toio</h3>
       <div class="goods-info-main">
         <img src="/img/toio.png" alt="">
@@ -222,10 +228,12 @@
           </div>
         </div>
       </div>
-      <a class="goods-info-close" href="#"></a>
+      <div class="goods-info-close">
+        <p>×</p>
+      </div>
     </div>
 
-    <div class="goods-info">
+    <div class="goods-info info-alilo">
       <h3>alilo</h3>
       <div class="goods-info-main">
         <img src="/img/alilo.png" alt="">
@@ -245,10 +253,12 @@
           </div>
         </div>
       </div>
-      <a class="goods-info-close" href="#"></a>
+      <div class="goods-info-close">
+        <p>×</p>
+      </div>
     </div>
 
-    <div class="goods-info">
+    <div class="goods-info info-romi">
       <h3>Romi</h3>
       <div class="goods-info-main">
         <img src="/img/romi.jpeg" alt="">
@@ -268,10 +278,12 @@
           </div>
         </div>
       </div>
-      <a class="goods-info-close" href="#"></a>
+      <div class="goods-info-close">
+        <p>×</p>
+      </div>
     </div>
 
-    <div class="goods-info">
+    <div class="goods-info info-swich">
       <h3>ころがスイッチ</h3>
       <div class="goods-info-main">
         <img src="/img/swich.webp" alt="">
@@ -291,145 +303,159 @@
           </div>
         </div>
       </div>
-      <a class="goods-info-close" href="#"></a>
+      <div class="goods-info-close">
+        <p>×</p>
+      </div>
     </div>
 
-    <div class="goods-info">
-      <h3><span>ナビ付き！つくってわかる</span><br>はじめてゲームプログラミング</h3>
+    <div class="goods-info info-car">
+      <h3>プログラミングカー</h3>
       <div class="goods-info-main">
-        <img src="/img/maxresdefault.png" alt="">
+        <img src="/img/car.jpg" alt="">
         <p>ここに商品のおすすめしたいポイント<br>
           とかを三行くらいで書いていく。<br>
           だいたいこれくらいの分量で。</p>
         <div class="product">
           <div class="product-left">
-            <h4><span>ナビ付き！つくってわかる</span><br>はじめてゲームプログラミング</h4>
-            <p>発売日:2021年6月11日<br>販売元:会社名<br>価格:5000円(税込)</p>
+            <h4>プログラミングカー</h4>
+            <p>販売元:Gakken<br>価格：6578円</p>
           </div>
           <div class="product-right">
-            <img src="/img/image 25.png" alt="">
+            <img src="/img/car.jpg" alt="">
             <div class="product-right-btn">
-              <a href="#">商品はこちら</a>
+              <a href="https://www.gakkensf.co.jp/pgc/">商品はこちら</a>
             </div>
           </div>
         </div>
       </div>
-      <a class="goods-info-close" href="#"></a>
+      <div class="goods-info-close">
+        <p>×</p>
+      </div>
     </div>
 
-    <div class="goods-info">
-      <h3><span>ナビ付き！つくってわかる</span><br>はじめてゲームプログラミング</h3>
+    <div class="goods-info info-logical">
+      <h3>ロジカルルートパズル </h3>
       <div class="goods-info-main">
-        <img src="/img/maxresdefault.png" alt="">
+        <img src="/img/rogical.jpeg" alt="">
         <p>ここに商品のおすすめしたいポイント<br>
           とかを三行くらいで書いていく。<br>
           だいたいこれくらいの分量で。</p>
         <div class="product">
           <div class="product-left">
-            <h4><span>ナビ付き！つくってわかる</span><br>はじめてゲームプログラミング</h4>
-            <p>発売日:2021年6月11日<br>販売元:会社名<br>価格:5000円(税込)</p>
+            <h4>ロジカルルートパズル</h4>
+            <p>販売元:KUMON<br>価格:4800円</p>
           </div>
           <div class="product-right">
-            <img src="/img/image 25.png" alt="">
+            <img src="/img/rogical.jpeg" alt="">
             <div class="product-right-btn">
-              <a href="#">商品はこちら</a>
+              <a href="https://www.kumonshuppan.com/kumontoy/kumontoy-syousai/?code=54771">商品はこちら</a>
             </div>
           </div>
         </div>
       </div>
-      <a class="goods-info-close" href="#"></a>
+      <div class="goods-info-close">
+        <p>×</p>
+      </div>
     </div>
 
-    <div class="goods-info">
-      <h3><span>ナビ付き！つくってわかる</span><br>はじめてゲームプログラミング</h3>
+    <div class="goods-info info-think">
+      <h3>Think!Think!</h3>
       <div class="goods-info-main">
-        <img src="/img/maxresdefault.png" alt="">
+        <img src="/img/thinkthink.webp" alt="">
         <p>ここに商品のおすすめしたいポイント<br>
           とかを三行くらいで書いていく。<br>
           だいたいこれくらいの分量で。</p>
         <div class="product">
           <div class="product-left">
-            <h4><span>ナビ付き！つくってわかる</span><br>はじめてゲームプログラミング</h4>
-            <p>発売日:2021年6月11日<br>販売元:会社名<br>価格:5000円(税込)</p>
+            <h4>Think!Think!</h4>
+            <p>販売元:Wonderfy<br>価格:月450円（スタンダードコース）<br>月980円（プレミアムコース）<br>フリーコース有り</p>
           </div>
           <div class="product-right">
-            <img src="/img/image 25.png" alt="">
+            <img src="/img/thinkthink.webp" alt="">
             <div class="product-right-btn">
-              <a href="#">商品はこちら</a>
+              <a href="https://think.wonderfy.inc/">商品はこちら</a>
             </div>
           </div>
         </div>
       </div>
-      <a class="goods-info-close" href="#"></a>
+      <div class="goods-info-close">
+        <p>×</p>
+      </div>
     </div>
 
-    <div class="goods-info">
-      <h3><span>ナビ付き！つくってわかる</span><br>はじめてゲームプログラミング</h3>
+    <div class="goods-info info-Q">
+      <h3>Q REMASTERED</h3>
       <div class="goods-info-main">
-        <img src="/img/maxresdefault.png" alt="">
+        <img src="/img/Q.jpeg" alt="">
         <p>ここに商品のおすすめしたいポイント<br>
           とかを三行くらいで書いていく。<br>
           だいたいこれくらいの分量で。</p>
         <div class="product">
           <div class="product-left">
-            <h4><span>ナビ付き！つくってわかる</span><br>はじめてゲームプログラミング</h4>
-            <p>発売日:2021年6月11日<br>販売元:会社名<br>価格:5000円(税込)</p>
+            <h4>Q REMASTERED</h4>
+            <p>発売日:2022年7月29日<br>販売元:リイカ<br>価格:999円</p>
           </div>
           <div class="product-right">
-            <img src="/img/image 25.png" alt="">
+            <img src="/img/Q.jpeg" alt="">
             <div class="product-right-btn">
-              <a href="#">商品はこちら</a>
+              <a href="http://www.liica.co.jp/q-switch/">商品はこちら</a>
             </div>
           </div>
         </div>
       </div>
-      <a class="goods-info-close" href="#"></a>
+      <div class="goods-info-close">
+        <p>×</p>
+      </div>
     </div>
 
-    <div class="goods-info">
-      <h3><span>ナビ付き！つくってわかる</span><br>はじめてゲームプログラミング</h3>
+    <div class="goods-info info-why">
+      <h3>Why!?プログラミング</h3>
       <div class="goods-info-main">
-        <img src="/img/maxresdefault.png" alt="">
+        <img src="/img/Why.jpeg" alt="">
         <p>ここに商品のおすすめしたいポイント<br>
           とかを三行くらいで書いていく。<br>
           だいたいこれくらいの分量で。</p>
         <div class="product">
           <div class="product-left">
-            <h4><span>ナビ付き！つくってわかる</span><br>はじめてゲームプログラミング</h4>
-            <p>発売日:2021年6月11日<br>販売元:会社名<br>価格:5000円(税込)</p>
+            <h4>Why!?プログラミング</h4>
+            <p>テレビ局:Eテレ<br>放送日時:（月）午後4:40〜4:50</p>
           </div>
           <div class="product-right">
-            <img src="/img/image 25.png" alt="">
+            <img src="/img/Why.jpeg" alt="">
             <div class="product-right-btn">
-              <a href="#">商品はこちら</a>
+              <a href="https://www.nhk.or.jp/school/sougou/programming/onair/">商品はこちら</a>
             </div>
           </div>
         </div>
       </div>
-      <a class="goods-info-close" href="#"></a>
+      <div class="goods-info-close">
+        <p>×</p>
+      </div>
     </div>
 
-    <div class="goods-info">
-      <h3><span>ナビ付き！つくってわかる</span><br>はじめてゲームプログラミング</h3>
+    <div class="goods-info info-tekisiko">
+      <h3>テキシコー</h3>
       <div class="goods-info-main">
-        <img src="/img/maxresdefault.png" alt="">
+        <img src="/img/tekisiko.png" alt="">
         <p>ここに商品のおすすめしたいポイント<br>
           とかを三行くらいで書いていく。<br>
           だいたいこれくらいの分量で。</p>
         <div class="product">
           <div class="product-left">
-            <h4><span>ナビ付き！つくってわかる</span><br>はじめてゲームプログラミング</h4>
-            <p>発売日:2021年6月11日<br>販売元:会社名<br>価格:5000円(税込)</p>
+            <h4>テキシコー</h4>
+            <p>テレビ局:Eテレ<br>放送日時:（火）午後4:50〜5:00前期</p>
           </div>
           <div class="product-right">
-            <img src="/img/image 25.png" alt="">
+            <img src="/img/tekisiko.png" alt="">
             <div class="product-right-btn">
-              <a href="#">商品はこちら</a>
+              <a href="https://www.nhk.or.jp/school/sougou/texico/">商品はこちら</a>
             </div>
           </div>
         </div>
       </div>
-      <a class="goods-info-close" href="#"></a>
+      <div class="goods-info-close">
+        <p>×</p>
+      </div>
     </div>
 
 
