--- a/ability.html
+++ b/ability.html
@@ -21,6 +21,7 @@
       <script src="//cdn.jsdelivr.net/npm/gsap@3.7.0/dist/ScrollTrigger.min.js"></script>
 </head>
 <body>
+  <div id="parent-body">
   <section id="ability-top">
     <div class="ability-top-heading">
       <h1>身に付く能力</h1>
@@ -90,7 +91,7 @@
   </section>
   <section class="parent-footer">
     <div class="parent-footer-1">
-        <img src="/img/遊んで学んで プログラミング.png" alt="">
+        <img src="/img/footerrogo.png" alt="">
         <div class="footer-btn-1">
             <div class="footer-btn-ability">
                 <div class="footer-ability-img">
@@ -116,11 +117,13 @@
     </div>
     <div class="parent-footer-2"></div>
 </section>
+
 <div id="parent-menu-btn">
   <img src="/img/menu.png" alt="">
   <p>メニュー</p>
 </div>
 </div>
+<!-- </div> -->
 <nav id="parent-menu">
 <div class="parent-menu-list">
   <ul>
