--- a/goods.html
+++ b/goods.html
@@ -45,9 +45,10 @@
 </head>
 
 <body>
+  <div id="parent-body">
   <section id="goods-top">
     <div class="goods-top-heading">
-      <h1>身に付く能力</h1>
+      <h1>商品紹介</h1>
       <h2>遊べる、学べる</h2>
     </div>
   </section>
@@ -462,7 +463,7 @@
   </section>
   <section class="parent-footer">
     <div class="parent-footer-1">
-      <img src="/img/遊んで学んで プログラミング.png" alt="">
+      <img src="/img/footerrogo.png" alt="">
       <div class="footer-btn-1">
         <div class="footer-btn-ability">
           <div class="footer-ability-img">
@@ -492,7 +493,8 @@
     <img src="/img/menu.png" alt="">
     <p>メニュー</p>
   </div>
-  </div>
+</div>
+  <!-- </div> -->
   <nav id="parent-menu">
   <div class="parent-menu-list">
     <ul>
