--- a/parent.html
+++ b/parent.html
@@ -43,6 +43,7 @@
 </head>
 
 <body>
+    <div id="parent-body">
         <section id="parent-top">
             <div class="top-main">
                 <div class="top-text">
@@ -142,7 +143,7 @@
         </section>
         <section class="parent-footer">
             <div class="parent-footer-1">
-                <img src="/img/遊んで学んで プログラミング.png" alt="">
+                <img src="/img/footerrogo.png" alt="">
                 <div class="footer-btn-1">
                     <div class="footer-btn-ability">
                         <div class="footer-ability-img">
@@ -172,6 +173,7 @@
             <img src="/img/menu.png" alt="">
             <p>メニュー</p>
         </div>
+    </div>
     <nav id="parent-menu">
         <div class="parent-menu-list">
             <ul>
