--- a/what.html
+++ b/what.html
@@ -72,7 +72,7 @@
     </section>
     <footer id="footer">
         <div class="footer-main">
-            <img src="/img/遊んで学んで プログラミング.png" alt="">
+            <img src="/img/footerrogo.png" alt="">
             <div class="footer-btn-1">
                 <div class="c-footer1-img">
                     <img class="c-footer1-img1" src="/img/newchild.png" alt="">
